python/lacquer/parsers/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    PARTITIONS
    SOME
    CAST
    PUBLIC
    TRY
    UNNEST
    NFKC
    NFKD
    START
    DISTRIBUTED
    OVER
    ANALYZE
    TEXT
    ROWS
    WITH
    POISSONIZED
    COLUMNS
    ORDINALITY
    WRITE
    VIEW
    OPTION
    COALESCE
    COLUMN
    TIMESTAMP
    GROUPING
    SYSTEM
    NFC
    TYPE
    CREATE
    DATA
    ANY
    CONSTRAINT
    APPROXIMATE
    STRATIFY
    UNCOMMITTED
    RECURSIVE
    NUMBER
    ROLLBACK
    SERIALIZABLE
    FOLLOWING
    LOGICAL
    INSERT
    DATE
    ADD
    SET
    READ
    DIVIDE
    PARTITION
    NFD
    LEVEL
    SESSION
    SHOW
    POSITION
    ROW
    CURRENT
    PRIVILEGES
    AT
    NULLIF
    CUBE
    REPEATABLE
    IF
    GRAPHVIZ
    FOR
    SUBSTRING
    CALL
    DROP
    USE
    COMMENT
    RESET
    SCHEMAS
    TIMES
    NORMALIZE
    BERNOULLI
    INTO
    SETS
    TABLES
    TRY_CAST
    ARRAY
    REPLACE
    ALTER
    EXPLAIN
    ISOLATION
    MAP
    COMMIT
    GRANT
    RENAME
    NO
    RESCALED
    COMMITTED
    UNBOUNDED
    SEMI
    PRECEDING
    TABLESAMPLE
    FORMAT
    ESCAPE
    ROLLUP
    DESCRIBE
    FUNCTIONS
    CATALOGS
    TRANSACTION
    CONFIDENCE
    WORK
    RANGE
    ONLY
    DELETE
    EXTRACT

Grammar

Rule 0     S' -> statement
Rule 1     statement -> query
Rule 2     subquery -> LPAREN query RPAREN
Rule 3     query -> query_no_with
Rule 4     query_no_with -> query_term order_by_opt limit_opt
Rule 5     order_by_opt -> ORDER BY sort_items
Rule 6     order_by_opt -> empty
Rule 7     sort_items -> sort_item
Rule 8     sort_items -> sort_items COMMA sort_item
Rule 9     sort_item -> expression order_opt null_ordering_opt
Rule 10    order_opt -> ASC
Rule 11    order_opt -> DESC
Rule 12    order_opt -> empty
Rule 13    null_ordering_opt -> NULLS FIRST
Rule 14    null_ordering_opt -> NULLS LAST
Rule 15    null_ordering_opt -> empty
Rule 16    limit_opt -> LIMIT INTEGER
Rule 17    limit_opt -> LIMIT ALL
Rule 18    limit_opt -> empty
Rule 19    query_term -> query_term_intersect
Rule 20    query_term -> query_term UNION set_quantifier_opt query_term_intersect
Rule 21    query_term -> query_term EXCEPT set_quantifier_opt query_term_intersect
Rule 22    query_term_intersect -> nonjoin_query_primary
Rule 23    query_term_intersect -> query_term_intersect INTERSECT set_quantifier_opt nonjoin_query_primary
Rule 24    nonjoin_query_primary -> simple_table
Rule 25    nonjoin_query_primary -> LPAREN query_term RPAREN
Rule 26    simple_table -> query_specification
Rule 27    simple_table -> explicit_table
Rule 28    simple_table -> table_value_constructor
Rule 29    explicit_table -> TABLE qualified_name
Rule 30    table_value_constructor -> VALUES values_list
Rule 31    values_list -> values_list COMMA expression
Rule 32    values_list -> expression
Rule 33    query_specification -> SELECT set_quantifier_opt adql_top_opt select_items table_expression_opt
Rule 34    adql_top_opt -> TOP INTEGER
Rule 35    adql_top_opt -> empty
Rule 36    where_opt -> WHERE search_condition
Rule 37    where_opt -> empty
Rule 38    group_by_opt -> GROUP BY grouping_elements
Rule 39    group_by_opt -> empty
Rule 40    grouping_elements -> qualified_name
Rule 41    grouping_elements -> grouping_elements COMMA qualified_name
Rule 42    having_opt -> HAVING search_condition
Rule 43    having_opt -> empty
Rule 44    set_quantifier_opt -> DISTINCT
Rule 45    set_quantifier_opt -> ALL
Rule 46    set_quantifier_opt -> empty
Rule 47    select_items -> select_item
Rule 48    select_items -> select_items COMMA select_item
Rule 49    select_item -> derived_column
Rule 50    select_item -> all_columns
Rule 51    derived_column -> value_expression alias_opt
Rule 52    all_columns -> ASTERISK
Rule 53    table_expression_opt -> FROM relations where_opt group_by_opt having_opt
Rule 54    table_expression_opt -> empty
Rule 55    relations -> relations COMMA table_reference
Rule 56    relations -> table_reference
Rule 57    table_reference -> table_primary
Rule 58    table_reference -> join_relation
Rule 59    table_primary -> aliased_relation
Rule 60    table_primary -> derived_table
Rule 61    table_primary -> LPAREN join_relation RPAREN
Rule 62    join_relation -> cross_join
Rule 63    join_relation -> qualified_join
Rule 64    join_relation -> natural_join
Rule 65    cross_join -> table_reference CROSS JOIN aliased_relation
Rule 66    qualified_join -> table_reference join_type JOIN table_reference join_criteria
Rule 67    natural_join -> table_reference NATURAL join_type JOIN aliased_relation
Rule 68    join_type -> INNER
Rule 69    join_type -> LEFT outer_opt
Rule 70    join_type -> RIGHT outer_opt
Rule 71    join_type -> FULL outer_opt
Rule 72    join_type -> empty
Rule 73    outer_opt -> OUTER
Rule 74    outer_opt -> empty
Rule 75    join_criteria -> ON search_condition
Rule 76    join_criteria -> USING LPAREN join_columns RPAREN
Rule 77    join_columns -> identifier
Rule 78    join_columns -> join_columns COMMA identifier
Rule 79    aliased_relation -> qualified_name alias_opt
Rule 80    derived_table -> subquery alias
Rule 81    alias_opt -> alias
Rule 82    alias_opt -> empty
Rule 83    alias -> as_opt identifier
Rule 84    expression -> search_condition
Rule 85    search_condition -> boolean_term
Rule 86    search_condition -> search_condition OR boolean_term
Rule 87    boolean_term -> boolean_factor
Rule 88    boolean_term -> boolean_term AND boolean_factor
Rule 89    boolean_factor -> not_opt boolean_test
Rule 90    boolean_test -> boolean_primary
Rule 91    boolean_primary -> predicate
Rule 92    boolean_primary -> parenthetic_expression
Rule 93    parenthetic_expression -> RPAREN expression RPAREN
Rule 94    predicate -> comparison_predicate
Rule 95    predicate -> between_predicate
Rule 96    predicate -> in_predicate
Rule 97    predicate -> like_predicate
Rule 98    predicate -> null_predicate
Rule 99    predicate -> exists_predicate
Rule 100   comparison_predicate -> value_expression comparison_operator value_expression
Rule 101   between_predicate -> value_expression not_opt BETWEEN value_expression AND value_expression
Rule 102   in_predicate -> value_expression not_opt IN in_value
Rule 103   in_value -> LPAREN in_expressions RPAREN
Rule 104   in_expressions -> value_expression
Rule 105   in_expressions -> in_expressions COMMA value_expression
Rule 106   like_predicate -> value_expression not_opt LIKE value_expression
Rule 107   null_predicate -> value_expression IS not_opt NULL
Rule 108   exists_predicate -> EXISTS subquery
Rule 109   value_expression -> value_expression PLUS term
Rule 110   value_expression -> value_expression MINUS term
Rule 111   value_expression -> term
Rule 112   term -> term ASTERISK factor
Rule 113   term -> term SLASH factor
Rule 114   term -> term PERCENT factor
Rule 115   term -> term CONCAT factor
Rule 116   term -> factor
Rule 117   factor -> sign_opt primary_expression
Rule 118   primary_expression -> parenthetic_primary_expression
Rule 119   primary_expression -> base_primary_expression
Rule 120   parenthetic_primary_expression -> LPAREN base_primary_expression RPAREN
Rule 121   base_primary_expression -> NULL
Rule 122   base_primary_expression -> number
Rule 123   base_primary_expression -> boolean_value
Rule 124   base_primary_expression -> STRING
Rule 125   base_primary_expression -> interval
Rule 126   base_primary_expression -> identifier STRING
Rule 127   base_primary_expression -> qualified_name
Rule 128   base_primary_expression -> function_call
Rule 129   base_primary_expression -> date_time
Rule 130   base_primary_expression -> case_specification
Rule 131   base_primary_expression -> subquery
Rule 132   function_call -> qualified_name LPAREN call_list RPAREN
Rule 133   case_specification -> simple_case
Rule 134   case_specification -> searched_case
Rule 135   simple_case -> CASE value_expression when_clauses else_opt END
Rule 136   searched_case -> CASE when_clauses else_opt END
Rule 137   when_clauses -> when_clauses when_clause
Rule 138   when_clauses -> when_clause
Rule 139   when_clause -> WHEN search_condition THEN value_expression
Rule 140   else_opt -> ELSE value_expression
Rule 141   else_opt -> empty
Rule 142   call_list -> call_list COMMA value_expression
Rule 143   call_list -> value_expression
Rule 144   general_literal -> STRING
Rule 145   general_literal -> interval
Rule 146   date_time -> CURRENT_DATE
Rule 147   date_time -> CURRENT_TIME integer_param_opt
Rule 148   date_time -> CURRENT_TIMESTAMP integer_param_opt
Rule 149   date_time -> LOCALTIME integer_param_opt
Rule 150   date_time -> LOCALTIMESTAMP integer_param_opt
Rule 151   timezone_specifier -> TIME ZONE interval
Rule 152   timezone_specifier -> TIME ZONE STRING
Rule 153   comparison_operator -> EQ
Rule 154   comparison_operator -> NE
Rule 155   comparison_operator -> LT
Rule 156   comparison_operator -> LE
Rule 157   comparison_operator -> GT
Rule 158   comparison_operator -> GE
Rule 159   as_opt -> AS
Rule 160   as_opt -> empty
Rule 161   not_opt -> NOT
Rule 162   not_opt -> empty
Rule 163   boolean_value -> TRUE
Rule 164   boolean_value -> FALSE
Rule 165   interval -> INTERVAL sign_opt STRING interval_field interval_end_opt
Rule 166   interval_end_opt -> TO interval_field
Rule 167   interval_end_opt -> empty
Rule 168   interval_field -> YEAR
Rule 169   interval_field -> MONTH
Rule 170   interval_field -> DAY
Rule 171   interval_field -> HOUR
Rule 172   interval_field -> MINUTE
Rule 173   interval_field -> SECOND
Rule 174   sign_opt -> sign
Rule 175   sign_opt -> empty
Rule 176   sign -> PLUS
Rule 177   sign -> MINUS
Rule 178   table_element -> IDENTIFIER type
Rule 179   type -> base_type integer_param_opt
Rule 180   integer_param_opt -> LPAREN INTEGER RPAREN
Rule 181   integer_param_opt -> empty
Rule 182   base_type -> IDENTIFIER
Rule 183   qualified_name -> qualified_name PERIOD identifier
Rule 184   qualified_name -> identifier
Rule 185   identifier -> IDENTIFIER
Rule 186   identifier -> quoted_identifier
Rule 187   identifier -> non_reserved
Rule 188   identifier -> DIGIT_IDENTIFIER
Rule 189   non_reserved -> NON_RESERVED
Rule 190   quoted_identifier -> QUOTED_IDENTIFIER
Rule 191   quoted_identifier -> BACKQUOTED_IDENTIFIER
Rule 192   number -> DECIMAL
Rule 193   number -> INTEGER
Rule 194   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
ALL                  : 17 45
ALTER                : 
ANALYZE              : 
AND                  : 88 101
ANY                  : 
APPROXIMATE          : 
ARRAY                : 
AS                   : 159
ASC                  : 10
ASTERISK             : 52 112
AT                   : 
BACKQUOTED_IDENTIFIER : 191
BERNOULLI            : 
BETWEEN              : 101
BY                   : 5 38
CALL                 : 
CASE                 : 135 136
CAST                 : 
CATALOGS             : 
COALESCE             : 
COLUMN               : 
COLUMNS              : 
COMMA                : 8 31 41 48 55 78 105 142
COMMENT              : 
COMMIT               : 
COMMITTED            : 
CONCAT               : 115
CONFIDENCE           : 
CONSTRAINT           : 
CREATE               : 
CROSS                : 65
CUBE                 : 
CURRENT              : 
CURRENT_DATE         : 146
CURRENT_TIME         : 147
CURRENT_TIMESTAMP    : 148
DATA                 : 
DATE                 : 
DAY                  : 170
DECIMAL              : 192
DELETE               : 
DESC                 : 11
DESCRIBE             : 
DIGIT_IDENTIFIER     : 188
DISTINCT             : 44
DISTRIBUTED          : 
DIVIDE               : 
DROP                 : 
ELSE                 : 140
END                  : 135 136
EQ                   : 153
ESCAPE               : 
EXCEPT               : 21
EXISTS               : 108
EXPLAIN              : 
EXTRACT              : 
FALSE                : 164
FIRST                : 13
FOLLOWING            : 
FOR                  : 
FORMAT               : 
FROM                 : 53
FULL                 : 71
FUNCTIONS            : 
GE                   : 158
GRANT                : 
GRAPHVIZ             : 
GROUP                : 38
GROUPING             : 
GT                   : 157
HAVING               : 42
HOUR                 : 171
IDENTIFIER           : 178 182 185
IF                   : 
IN                   : 102
INNER                : 68
INSERT               : 
INTEGER              : 16 34 180 193
INTERSECT            : 23
INTERVAL             : 165
INTO                 : 
IS                   : 107
ISOLATION            : 
JOIN                 : 65 66 67
LAST                 : 14
LE                   : 156
LEFT                 : 69
LEVEL                : 
LIKE                 : 106
LIMIT                : 16 17
LOCALTIME            : 149
LOCALTIMESTAMP       : 150
LOGICAL              : 
LPAREN               : 2 25 61 76 103 120 132 180
LT                   : 155
MAP                  : 
MINUS                : 110 177
MINUTE               : 172
MONTH                : 169
NATURAL              : 67
NE                   : 154
NFC                  : 
NFD                  : 
NFKC                 : 
NFKD                 : 
NO                   : 
NON_RESERVED         : 189
NORMALIZE            : 
NOT                  : 161
NULL                 : 107 121
NULLIF               : 
NULLS                : 13 14
NUMBER               : 
ON                   : 75
ONLY                 : 
OPTION               : 
OR                   : 86
ORDER                : 5
ORDINALITY           : 
OUTER                : 73
OVER                 : 
PARTITION            : 
PARTITIONS           : 
PERCENT              : 114
PERIOD               : 183
PLUS                 : 109 176
POISSONIZED          : 
POSITION             : 
PRECEDING            : 
PRIVILEGES           : 
PUBLIC               : 
QUOTED_IDENTIFIER    : 190
RANGE                : 
READ                 : 
RECURSIVE            : 
RENAME               : 
REPEATABLE           : 
REPLACE              : 
RESCALED             : 
RESET                : 
RIGHT                : 70
ROLLBACK             : 
ROLLUP               : 
ROW                  : 
ROWS                 : 
RPAREN               : 2 25 61 76 93 93 103 120 132 180
SCHEMAS              : 
SECOND               : 173
SELECT               : 33
SEMI                 : 
SERIALIZABLE         : 
SESSION              : 
SET                  : 
SETS                 : 
SHOW                 : 
SLASH                : 113
SOME                 : 
START                : 
STRATIFY             : 
STRING               : 124 126 144 152 165
SUBSTRING            : 
SYSTEM               : 
TABLE                : 29
TABLES               : 
TABLESAMPLE          : 
TEXT                 : 
THEN                 : 139
TIME                 : 151 152
TIMES                : 
TIMESTAMP            : 
TO                   : 166
TOP                  : 34
TRANSACTION          : 
TRUE                 : 163
TRY                  : 
TRY_CAST             : 
TYPE                 : 
UNBOUNDED            : 
UNCOMMITTED          : 
UNION                : 20
UNNEST               : 
USE                  : 
USING                : 76
VALUES               : 30
VIEW                 : 
WHEN                 : 139
WHERE                : 36
WITH                 : 
WORK                 : 
WRITE                : 
YEAR                 : 168
ZONE                 : 151 152
error                : 

Nonterminals, with rules where they appear

adql_top_opt         : 33
alias                : 80 81
alias_opt            : 51 79
aliased_relation     : 59 65 67
all_columns          : 50
as_opt               : 83
base_primary_expression : 119 120
base_type            : 179
between_predicate    : 95
boolean_factor       : 87 88
boolean_primary      : 90
boolean_term         : 85 86 88
boolean_test         : 89
boolean_value        : 123
call_list            : 132 142
case_specification   : 130
comparison_operator  : 100
comparison_predicate : 94
cross_join           : 62
date_time            : 129
derived_column       : 49
derived_table        : 60
else_opt             : 135 136
empty                : 6 12 15 18 35 37 39 43 46 54 72 74 82 141 160 162 167 175 181
exists_predicate     : 99
explicit_table       : 27
expression           : 9 31 32 93
factor               : 112 113 114 115 116
function_call        : 128
general_literal      : 
group_by_opt         : 53
grouping_elements    : 38 41
having_opt           : 53
identifier           : 77 78 83 126 183 184
in_expressions       : 103 105
in_predicate         : 96
in_value             : 102
integer_param_opt    : 147 148 149 150 179
interval             : 125 145 151
interval_end_opt     : 165
interval_field       : 165 166
join_columns         : 76 78
join_criteria        : 66
join_relation        : 58 61
join_type            : 66 67
like_predicate       : 97
limit_opt            : 4
natural_join         : 64
non_reserved         : 187
nonjoin_query_primary : 22 23
not_opt              : 89 101 102 106 107
null_ordering_opt    : 9
null_predicate       : 98
number               : 122
order_by_opt         : 4
order_opt            : 9
outer_opt            : 69 70 71
parenthetic_expression : 92
parenthetic_primary_expression : 118
predicate            : 91
primary_expression   : 117
qualified_join       : 63
qualified_name       : 29 40 41 79 127 132 183
query                : 1 2
query_no_with        : 3
query_specification  : 26
query_term           : 4 20 21 25
query_term_intersect : 19 20 21 23
quoted_identifier    : 186
relations            : 53 55
search_condition     : 36 42 75 84 86 139
searched_case        : 134
select_item          : 47 48
select_items         : 33 48
set_quantifier_opt   : 20 21 23 33
sign                 : 174
sign_opt             : 117 165
simple_case          : 133
simple_table         : 24
sort_item            : 7 8
sort_items           : 5 8
statement            : 0
subquery             : 80 108 131
table_element        : 
table_expression_opt : 33
table_primary        : 57
table_reference      : 55 56 65 66 66 67
table_value_constructor : 28
term                 : 109 110 111 112 113 114 115
timezone_specifier   : 
type                 : 178
value_expression     : 51 100 100 101 101 101 102 104 105 106 106 107 109 110 135 139 140 142 143
values_list          : 30 31
when_clause          : 137 138
when_clauses         : 135 136 137
where_opt            : 53

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . query
    (3) query -> . query_no_with
    (4) query_no_with -> . query_term order_by_opt limit_opt
    (19) query_term -> . query_term_intersect
    (20) query_term -> . query_term UNION set_quantifier_opt query_term_intersect
    (21) query_term -> . query_term EXCEPT set_quantifier_opt query_term_intersect
    (22) query_term_intersect -> . nonjoin_query_primary
    (23) query_term_intersect -> . query_term_intersect INTERSECT set_quantifier_opt nonjoin_query_primary
    (24) nonjoin_query_primary -> . simple_table
    (25) nonjoin_query_primary -> . LPAREN query_term RPAREN
    (26) simple_table -> . query_specification
    (27) simple_table -> . explicit_table
    (28) simple_table -> . table_value_constructor
    (33) query_specification -> . SELECT set_quantifier_opt adql_top_opt select_items table_expression_opt
    (29) explicit_table -> . TABLE qualified_name
    (30) table_value_constructor -> . VALUES values_list

    LPAREN          shift and go to state 12
    SELECT          shift and go to state 13
    TABLE           shift and go to state 10
    VALUES          shift and go to state 3

    query_no_with                  shift and go to state 9
    simple_table                   shift and go to state 2
    query_specification            shift and go to state 5
    query_term_intersect           shift and go to state 1
    table_value_constructor        shift and go to state 14
    explicit_table                 shift and go to state 4
    query_term                     shift and go to state 11
    nonjoin_query_primary          shift and go to state 6
    statement                      shift and go to state 7
    query                          shift and go to state 8

state 1

    (19) query_term -> query_term_intersect .
    (23) query_term_intersect -> query_term_intersect . INTERSECT set_quantifier_opt nonjoin_query_primary

    UNION           reduce using rule 19 (query_term -> query_term_intersect .)
    EXCEPT          reduce using rule 19 (query_term -> query_term_intersect .)
    ORDER           reduce using rule 19 (query_term -> query_term_intersect .)
    LIMIT           reduce using rule 19 (query_term -> query_term_intersect .)
    $end            reduce using rule 19 (query_term -> query_term_intersect .)
    RPAREN          reduce using rule 19 (query_term -> query_term_intersect .)
    INTERSECT       shift and go to state 15


state 2

    (24) nonjoin_query_primary -> simple_table .

    INTERSECT       reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    UNION           reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    EXCEPT          reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    ORDER           reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    LIMIT           reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    $end            reduce using rule 24 (nonjoin_query_primary -> simple_table .)
    RPAREN          reduce using rule 24 (nonjoin_query_primary -> simple_table .)


state 3

    (30) table_value_constructor -> VALUES . values_list
    (31) values_list -> . values_list COMMA expression
    (32) values_list -> . expression
    (84) expression -> . search_condition
    (85) search_condition -> . boolean_term
    (86) search_condition -> . search_condition OR boolean_term
    (87) boolean_term -> . boolean_factor
    (88) boolean_term -> . boolean_term AND boolean_factor
    (89) boolean_factor -> . not_opt boolean_test
    (161) not_opt -> . NOT
    (162) not_opt -> . empty
    (194) empty -> .

    NOT             shift and go to state 18
    RPAREN          reduce using rule 194 (empty -> .)
    EXISTS          reduce using rule 194 (empty -> .)
    PLUS            reduce using rule 194 (empty -> .)
    MINUS           reduce using rule 194 (empty -> .)
    LPAREN          reduce using rule 194 (empty -> .)
    NULL            reduce using rule 194 (empty -> .)
    STRING          reduce using rule 194 (empty -> .)
    DECIMAL         reduce using rule 194 (empty -> .)
    INTEGER         reduce using rule 194 (empty -> .)
    TRUE            reduce using rule 194 (empty -> .)
    FALSE           reduce using rule 194 (empty -> .)
    INTERVAL        reduce using rule 194 (empty -> .)
    IDENTIFIER      reduce using rule 194 (empty -> .)
    DIGIT_IDENTIFIER reduce using rule 194 (empty -> .)
    CURRENT_DATE    reduce using rule 194 (empty -> .)
    CURRENT_TIME    reduce using rule 194 (empty -> .)
    CURRENT_TIMESTAMP reduce using rule 194 (empty -> .)
    LOCALTIME       reduce using rule 194 (empty -> .)
    LOCALTIMESTAMP  reduce using rule 194 (empty -> .)
    QUOTED_IDENTIFIER reduce using rule 194 (empty -> .)
    BACKQUOTED_IDENTIFIER reduce using rule 194 (empty -> .)
    NON_RESERVED    reduce using rule 194 (empty -> .)
    CASE            reduce using rule 194 (empty -> .)

    search_condition               shift and go to state 20
    boolean_factor                 shift and go to state 16
    empty                          shift and go to state 17
    not_opt                        shift and go to state 19
    expression                     shift and go to state 22
    boolean_term                   shift and go to state 23
    values_list                    shift and go to state 21

state 4

    (27) simple_table -> explicit_table .

    INTERSECT       reduce using rule 27 (simple_table -> explicit_table .)
    RPAREN          reduce using rule 27 (simple_table -> explicit_table .)
    UNION           reduce using rule 27 (simple_table -> explicit_table .)
    EXCEPT          reduce using rule 27 (simple_table -> explicit_table .)
    ORDER           reduce using rule 27 (simple_table -> explicit_table .)
    LIMIT           reduce using rule 27 (simple_table -> explicit_table .)
    $end            reduce using rule 27 (simple_table -> explicit_table .)


state 5

    (26) simple_table -> query_specification .

    INTERSECT       reduce using rule 26 (simple_table -> query_specification .)
    RPAREN          reduce using rule 26 (simple_table -> query_specification .)
    UNION           reduce using rule 26 (simple_table -> query_specification .)
    EXCEPT          reduce using rule 26 (simple_table -> query_specification .)
    ORDER           reduce using rule 26 (simple_table -> query_specification .)
    LIMIT           reduce using rule 26 (simple_table -> query_specification .)
    $end            reduce using rule 26 (simple_table -> query_specification .)


state 6

    (22) query_term_intersect -> nonjoin_query_primary .

    INTERSECT       reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    UNION           reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    EXCEPT          reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    ORDER           reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    LIMIT           reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    $end            reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)
    RPAREN          reduce using rule 22 (query_term_intersect -> nonjoin_query_primary .)


state 7

    (0) S' -> statement .



state 8

    (1) statement -> query .

    $end            reduce using rule 1 (statement -> query .)


state 9

    (3) query -> query_no_with .

    $end            reduce using rule 3 (query -> query_no_with .)
    RPAREN          reduce using rule 3 (query -> query_no_with .)


state 10

    (29) explicit_table -> TABLE . qualified_name
    (183) qualified_name -> . qualified_name PERIOD identifier
    (184) qualified_name -> . identifier
    (185) identifier -> . IDENTIFIER
    (186) identifier -> . quoted_identifier
    (187) identifier -> . non_reserved
    (188) identifier -> . DIGIT_IDENTIFIER
    (190) quoted_identifier -> . QUOTED_IDENTIFIER
    (191) quoted_identifier -> . BACKQUOTED_IDENTIFIER
    (189) non_reserved -> . NON_RESERVED

    IDENTIFIER      shift and go to state 27
    DIGIT_IDENTIFIER shift and go to state 26
    QUOTED_IDENTIFIER shift and go to state 24
    BACKQUOTED_IDENTIFIER shift and go to state 31
    NON_RESERVED    shift and go to state 30

    non_reserved                   shift and go to state 28
    qualified_name                 shift and go to state 29
    quoted_identifier              shift and go to state 25
    identifier                     shift and go to state 32

state 11

    (4) query_no_with -> query_term . order_by_opt limit_opt
    (20) query_term -> query_term . UNION set_quantifier_opt query_term_intersect
    (21) query_term -> query_term . EXCEPT set_quantifier_opt query_term_intersect
    (5) order_by_opt -> . ORDER BY sort_items
    (6) order_by_opt -> . empty
    (194) empty -> .

    UNION           shift and go to state 33
    EXCEPT          shift and go to state 35
    ORDER           shift and go to state 36
    LIMIT           reduce using rule 194 (empty -> .)
    $end            reduce using rule 194 (empty -> .)
    RPAREN          reduce using rule 194 (empty -> .)

    empty                          shift and go to state 34
    order_by_opt                   shift and go to state 37

state 12

    (25) nonjoin_query_primary -> LPAREN . query_term RPAREN
    (19) query_term -> . query_term_intersect
    (20) query_term -> . query_term UNION set_quantifier_opt query_term_intersect
    (21) query_term -> . query_term EXCEPT set_quantifier_opt query_term_intersect
    (22) query_term_intersect -> . nonjoin_query_primary
    (23) query_term_intersect -> . query_term_intersect INTERSECT set_quantifier_opt nonjoin_query_primary
    (24) nonjoin_query_primary -> . simple_table
    (25) nonjoin_query_primary -> . LPAREN query_term RPAREN
    (26) simple_table -> . query_specification
    (27) simple_table -> . explicit_table
    (28) simple_table -> . table_value_constructor
    (33) query_specification -> . SELECT set_quantifier_opt adql_top_opt select_items table_expression_opt
    (29) explicit_table -> . TABLE qualified_name
    (30) table_value_constructor -> . VALUES values_list

    LPAREN          shift and go to state 12
    SELECT          shift and go to state 13
    TABLE           shift and go to state 10
    VALUES          shift and go to state 3

    query_term_intersect           shift and go to state 1
    simple_table                   shift and go to state 2
    query_specification            shift and go to state 5
    table_value_constructor        shift and go to state 14
    explicit_table                 shift and go to state 4
    query_term                     shift and go to state 38
    nonjoin_query_primary          shift and go to state 6

state 13

    (33) query_specification -> SELECT . set_quantifier_opt adql_top_opt select_items table_expression_opt
    (44) set_quantifier_opt -> . DISTINCT
    (45) set_quantifier_opt -> . ALL
    (46) set_quantifier_opt -> . empty
    (194) empty -> .

    DISTINCT        shift and go to state 42
    ALL             shift and go to state 41
    TOP             reduce using rule 194 (empty -> .)
    ASTERISK        reduce using rule 194 (empty -> .)
    PLUS            reduce using rule 194 (empty -> .)
    MINUS           reduce using rule 194 (empty -> .)
    LPAREN          reduce using rule 194 (empty -> .)
    NULL            reduce using rule 194 (empty -> .)
    STRING          reduce using rule 194 (empty -> .)
    DECIMAL         reduce using rule 194 (empty -> .)
    INTEGER         reduce using rule 194 (empty -> .)
    TRUE            reduce using rule 194 (empty -> .)
    FALSE           reduce using rule 194 (empty -> .)
    INTERVAL        reduce using rule 194 (empty -> .)
    IDENTIFIER      reduce using rule 194 (empty -> .)
    DIGIT_IDENTIFIER reduce using rule 194 (empty -> .)
    CURRENT_DATE    reduce using rule 194 (empty -> .)
    CURRENT_TIME    reduce using rule 194 (empty -> .)
    CURRENT_TIMESTAMP reduce using rule 194 (empty -> .)
    LOCALTIME       reduce using rule 194 (empty -> .)
    LOCALTIMESTAMP  reduce using rule 194 (empty -> .)
    QUOTED_IDENTIFIER reduce using rule 194 (empty -> .)
    BACKQUOTED_IDENTIFIER reduce using rule 194 (empty -> .)
    NON_RESERVED    reduce using rule 194 (empty -> .)
    CASE            reduce using rule 194 (empty -> .)

    empty                          shift and go to state 39
    set_quantifier_opt             shift and go to state 40

state 14

    (28) simple_table -> table_value_constructor .

    INTERSECT       reduce using rule 28 (simple_table -> table_value_constructor .)
    RPAREN          reduce using rule 28 (simple_table -> table_value_constructor .)
    UNION           reduce using rule 28 (simple_table -> table_value_constructor .)
    EXCEPT          reduce using rule 28 (simple_table -> table_value_constructor .)
    ORDER           reduce using rule 28 (simple_table -> table_value_constructor .)
    LIMIT           reduce using rule 28 (simple_table -> table_value_constructor .)
    $end            reduce using rule 28 (simple_table -> table_value_constructor .)


state 15

    (23) query_term_intersect -> query_term_intersect INTERSECT . set_quantifier_opt nonjoin_query_primary
    (44) set_quantifier_opt -> . DISTINCT
    (45) set_quantifier_opt -> . ALL
    (46) set_quantifier_opt -> . empty
    (194) empty -> .

    DISTINCT        shift and go to state 42
    ALL             shift and go to state 41
    LPAREN          reduce using rule 194 (empty -> .)
    SELECT          reduce using rule 194 (empty -> .)
    TABLE           reduce using rule 194 (empty -> .)
    VALUES          reduce using rule 194 (empty -> .)

    empty                          shift and go to state 39
    set_quantifier_opt             shift and go to state 43

state 16

    (87) boolean_term -> boolean_factor .

    AND             reduce using rule 87 (boolean_term -> boolean_factor .)
    OR              reduce using rule 87 (boolean_term -> boolean_factor .)
    ASC             reduce using rule 87 (boolean_term -> boolean_factor .)
    DESC            reduce using rule 87 (boolean_term -> boolean_factor .)
    NULLS           reduce using rule 87 (boolean_term -> boolean_factor .)
    COMMA           reduce using rule 87 (boolean_term -> boolean_factor .)
    LIMIT           reduce using rule 87 (boolean_term -> boolean_factor .)
    $end            reduce using rule 87 (boolean_term -> boolean_factor .)
    RPAREN          reduce using rule 87 (boolean_term -> boolean_factor .)
    INTERSECT       reduce using rule 87 (boolean_term -> boolean_factor .)
    UNION           reduce using rule 87 (boolean_term -> boolean_factor .)
    EXCEPT          reduce using rule 87 (boolean_term -> boolean_factor .)
    ORDER           reduce using rule 87 (boolean_term -> boolean_factor .)
    THEN            reduce using rule 87 (boolean_term -> boolean_factor .)
    GROUP           reduce using rule 87 (boolean_term -> boolean_factor .)
    HAVING          reduce using rule 87 (boolean_term -> boolean_factor .)
    CROSS           reduce using rule 87 (boolean_term -> boolean_factor .)
    NATURAL         reduce using rule 87 (boolean_term -> boolean_factor .)
    INNER           reduce using rule 87 (boolean_term -> boolean_factor .)
    LEFT            reduce using rule 87 (boolean_term -> boolean_factor .)
    RIGHT           reduce using rule 87 (boolean_term -> boolean_factor .)
    FULL            reduce using rule 87 (boolean_term -> boolean_factor .)
    JOIN            reduce using rule 87 (boolean_term -> boolean_factor .)
    WHERE           reduce using rule 87 (boolean_term -> boolean_factor .)
    ON              reduce using rule 87 (boolean_term -> boolean_factor .)
    USING           reduce using rule 87 (boolean_term -> boolean_factor .)


state 17

    (162) not_opt -> empty .
